# OnlyCash

./: .env.example  .gitignore  pyproject.toml
src/core/: config.py
